[gd_scene load_steps=14 format=3 uid="uid://stq6yyadeyjn"]

[ext_resource type="Script" uid="uid://cfvy05lnoj7uv" path="res://src/character/player_character.gd" id="1_yny20"]
[ext_resource type="PackedScene" uid="uid://drknuc7u7hx5e" path="res://assets/character/character_v_1.tscn" id="2_1irux"]
[ext_resource type="Script" uid="uid://bdji4l0bh2re2" path="res://src/modules/finite_state_machine/state_machine.gd" id="2_2p3op"]
[ext_resource type="Script" uid="uid://dqf2dv04wdo3i" path="res://src/character/states/player_idle_state.gd" id="3_8mo58"]
[ext_resource type="Script" uid="uid://cmnib6pvh2w8i" path="res://src/character/states/player_walk_state.gd" id="4_k8eue"]
[ext_resource type="Script" uid="uid://dkvn5imuc6ehs" path="res://src/character/states/player_death_state.gd" id="5_tntuy"]
[ext_resource type="Script" uid="uid://co7fdiqk0u4sk" path="res://src/character/states/player_jump_state.gd" id="6_56uj1"]
[ext_resource type="Script" uid="uid://bmknk64fxjomu" path="res://src/character/states/player_fall_state.gd" id="8_a5pac"]
[ext_resource type="Script" uid="uid://dmtt0c2xadp2d" path="res://src/character/camera/camera_pivot.gd" id="10_8cpw0"]
[ext_resource type="Script" uid="uid://0sl55afsirix" path="res://src/character/camera/states/camera_2d_state.gd" id="11_1irux"]
[ext_resource type="Script" uid="uid://cew1815m2eqft" path="res://src/character/camera/states/camera_topdown_state.gd" id="12_1irux"]
[ext_resource type="PackedScene" uid="uid://c3g55casshl06" path="res://src/components/visibility_component.tscn" id="13_omsti"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yny20"]
size = Vector3(0.6, 2, 0.6)

[node name="Character" type="CharacterBody3D"]
script = ExtResource("1_yny20")
move_duration = 0.1
jump_force = 27.0
gravity_influence = 10.0
metadata/_custom_type_script = "uid://cfvy05lnoj7uv"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_yny20")

[node name="character_v1" parent="." instance=ExtResource("2_1irux")]

[node name="Skeleton3D" parent="character_v1/metarig" index="0"]
bones/4/position = Vector3(2.49539e-10, 0.773666, -0.0552)
bones/5/rotation = Quaternion(-0.0474059, 0.00745523, -0.0244716, 0.998548)
bones/6/rotation = Quaternion(-0.0525224, -0.000458475, -0.0188262, 0.998442)
bones/10/rotation = Quaternion(0.996699, 0.031564, 0.0212106, -0.0717297)
bones/11/rotation = Quaternion(-0.044773, 0.0157982, 0.00555741, 0.998857)
bones/12/rotation = Quaternion(0.0838475, 0.0029846, -0.069892, 0.99402)
bones/13/position = Vector3(0.102965, 0.23328, -0.0339642)
bones/14/position = Vector3(-0.100078, 0.223833, 0.026955)
bones/16/rotation = Quaternion(0.978208, -0.0183828, 0.0135787, 0.206364)
bones/17/rotation = Quaternion(0.254956, 0.000501356, -0.0395506, 0.966143)
bones/19/rotation = Quaternion(0.978208, 0.0183826, -0.0135784, 0.206365)
bones/20/rotation = Quaternion(0.254956, -0.000501354, 0.0395505, 0.966143)

[node name="Pivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_2p3op")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://bdji4l0bh2re2"

[node name="Idle" type="Node" parent="FiniteStateMachine"]
script = ExtResource("3_8mo58")
metadata/_custom_type_script = "uid://c0w66x5j564rh"

[node name="Walk" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_k8eue")
metadata/_custom_type_script = "uid://c0w66x5j564rh"

[node name="Death" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_tntuy")
metadata/_custom_type_script = "uid://c0w66x5j564rh"

[node name="Jump" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_56uj1")
metadata/_custom_type_script = "uid://c0w66x5j564rh"

[node name="Fall" type="Node" parent="FiniteStateMachine"]
script = ExtResource("8_a5pac")
metadata/_custom_type_script = "uid://c0w66x5j564rh"

[node name="CameraPivot" type="Marker3D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("10_8cpw0")
player = NodePath("..")

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 16)

[node name="CameraStateMachine" type="Node" parent="CameraPivot" node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_2p3op")
initial_state = NodePath("2D")
metadata/_custom_type_script = "uid://bdji4l0bh2re2"

[node name="2D" type="Node" parent="CameraPivot/CameraStateMachine"]
script = ExtResource("11_1irux")
metadata/_custom_type_script = "uid://cwho3wtapiyg4"

[node name="TopDown" type="Node" parent="CameraPivot/CameraStateMachine"]
script = ExtResource("12_1irux")
metadata/_custom_type_script = "uid://cwho3wtapiyg4"

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
remote_path = NodePath("../VisibilityComponent")
update_rotation = false
update_scale = false

[node name="VisibilityComponent" parent="." instance=ExtResource("13_omsti")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
top_level = true

[node name="Marker3D" parent="VisibilityComponent" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.5)

[node name="Marker3D2" parent="VisibilityComponent" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.5)

[node name="Marker3D3" parent="VisibilityComponent" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)

[node name="Marker3D4" parent="VisibilityComponent" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[editable path="character_v1"]
[editable path="VisibilityComponent"]
